# cpp-utils

./: CMakeLists.txt
.github/workflows/: tests.yml
cmake/: cpp-utilsConfig.cmake.in
include/cpp_utils/: annotated_enum.h  annotated_variant.h  circular_buffer.h  cloneable.h  darray.h  flag_helpers.h  optional_tuple.h
test/: optional_tuple.cpp
